<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/font_progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/disp_warn"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/disp_lower"
            android:textColor="#000000" />

        <SeekBar
        	android:id="@+id/font_seekbar"
            style="@style/Widget.SeekBar.Normal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:text="@string/disp_plus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>
