<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        layout="@layout/head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title_hour"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/timeset_h"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title_minu"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/timeset_m"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />

            <TextView
                android:id="@+id/title_second"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/timeset_s"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViewh"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/wheel_bg_1" />

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViewm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/wheel_bg_1" />

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViews"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wheel_bg_1" />
        </LinearLayout>

        <TextView
            android:id="@+id/remind"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reheart_time"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        layout="@layout/bottom_two" />

</LinearLayout>
