<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/datesetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/date_set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/list_selector_flatcolor"
            android:clickable="true"
            android:text="@string/date_set"
            android:textColor="#000000" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/time_set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/list_selector_flatcolor"
            android:clickable="true"
            android:text="@string/time_set"
            android:textColor="#000000" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RelativeLayout
            android:id="@+id/hours_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:text="@string/time_mode"
                android:textColor="#000000" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ToggleButton
                android:id="@+id/is24hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip"
                android:background="@android:color/transparent"
                android:button="@drawable/toggle_btn"
                android:checked="false"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/autoset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:text="@string/date_autoset"
                android:textColor="#000000" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ToggleButton
                android:id="@+id/isauto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip"
                android:background="@android:color/transparent"
                android:button="@drawable/toggle_btn"
                android:checked="false"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dip"
            android:background="#FFFFFF"
            android:gravity="center">

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViewY"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wheel_bg_1" />

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViewM"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/wheel_bg_1" />

            <com.ab.view.wheel.AbWheelView
                android:id="@+id/wheelViewD"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wheel_bg_1" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        layout="@layout/bottom_two" />

</LinearLayout>
